evidence/20260407/CFG-TRANSPORT-ISO/artifacts/20260407T080249Z-path-a-usbmodem.log
  File "<stdin>", line 4
    frame = @CFG:protocol_version:2n
                                  ^
SyntaxError: invalid decimal literal
